<resources>
    <string name="app_name">Report Finder</string>

    <!--Strings From Facebook-->
    <string name="facebook_app_id">1105248332941331</string>
    <string name="fb_login_protocol_scheme">fb1105248332941331</string>

    <!--Strings From Google-->
    <string name="google_sign_web_client_id">975325284245-440g8oek12v5fekq7eurhr8fth3rrole.apps.googleusercontent.com</string>


    <!--Strings for Sign Up Page and Login Page-->
    <string name="null_username">Please enter a user name</string>
    <string name="passwords_not_equal">Passwords do not match</string>
    <string name="null_emailPhone">Please enter an email address or phone number</string>
    <string name="null_password">Please enter a password</string>
    <string name="poor_email_format">Please enter a valid email</string>
    <string name="short_password">Password must be at least 6 characters</string>
    <string name="email_in_use">Email is already in use</string>
    <string name="email_phone_edit_text_email_input">Email</string>
    <string name="email_phone_edit_text_phone_input">Phone</string>
    <string name="email_phone_edit_text_default">Email or Phone</string>
    <string name="too_many_phone_requests">Too many requests at this time, please try again later</string>
    <string name="phone_auth_timed_out">Check if phone number is correct</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="incorrect_email">User does not exist</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="invalid_phone_number">Please Enter a Valid Phone Number</string>

    <!--Strings for Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_reports">My Reports</string>
    <string name="nav_my_votes">My Votes</string>
    <string name="nav_resolved_reports">Resolved Issues</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_saved_reports">Saved Reports</string>

    <!--Strings for Create a Report Page-->
    <string name="videoError">Video Not Supported</string>
    <string name="title_activity_maps">Select a Location</string>
    <string name="create_report_null_title">Please Enter A Title</string>
    <string name="create_report_null_description">Please Describe the Issue</string>
    <string name="create_report_null_location">Please Select A Location</string>
    <string name="create_report_file_limit_reached">File Upload Limit Reached</string>
    <string name="create_report_video_limit_reached">One Video File Already Uploaded</string>
    <string name="title_activity_user_view">UserViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--App String Constants-->
    <string name="database_reports_ref">reports</string>
    <string name="storage_files_ref">files</string>
    <string name="database_urgency_ref">urgency</string>
    <string name="database_category_ref">categories</string>
    <string name="database_users_ref">users</string>
    <string name="database_user_votes_ref">userVotes</string>

    <string name="video_filetype">video/mpeg</string>
    <string name="image_filetype">image/jpeg</string>
    <string name="video_file_extension">.mp4</string>
    <string name="image_file_extension">.jpg</string>
    <string name="video_file_prefix">video</string>
    <string name="image_file_prefix">image</string>

    <string name="default_urgency">Urgency</string>
    <string name="default_category">Category</string>

    <string name="very_urgent_urgency">Very Urgent</string>

    <!--Internal Storage File Names-->
    <string name="urgency_array_list_location">urgencyArrayList</string>
    <string name="category_array_list_location">categoryArrayList</string>
    <string name="saved_reports_array_list_location">savedReportsArrayList</string>


</resources>
